--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-gh-pages": "^0.5.1"
+  },
+  "devDependencies": {
+    "livereload": "^0.3.7"
   }
 }
