--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "url": "https://github.com/daix6/daix6.github.io/issues"
   },
   "homepage": "https://github.com/daix6/daix6.github.io",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "del": "^1.2.0",
+    "gulp-gh-pages": "^0.5.1",
     "gulp-jade": "^1.0.0",
     "gulp-less": "^3.0.3",
+    "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-gh-pages": "^0.5.1",
-    "gulp-livereload": "^3.8.0",
     "st": "^0.5.4"
   }
 }
