--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/daix6/daix6.github.io",
   "dependencies": {},
   "devDependencies": {
+    "browserify": "^11.0.1",
     "del": "^1.2.0",
     "gulp-gh-pages": "^0.5.1",
     "gulp-jade": "^1.0.0",
@@ -25,6 +26,7 @@
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-sourcemaps": "^1.5.2",
-    "st": "^0.5.4"
+    "st": "^0.5.4",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
